<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="nl.testchamber.mailordercoffeeshop.orderoverview.OrderOverviewViewModel" />

        <variable
            name="listeners"
            type="nl.testchamber.mailordercoffeeshop.orderoverview.OrderOverviewActivity.Listeners" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryDarkColor"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_turquoise"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/beverage_detail_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/beverage_detail_ingredients_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/secondaryColor"
                    app:layout_constraintBottom_toTopOf="@id/input_details_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <TextView
                        android:id="@+id/beverage_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:background="@color/primaryDarkColor"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:text="@{viewModel.orderName}"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toTopOf="@id/beverage_detail_volume_drawable"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.1"
                        tools:text="Title" />

                    <ImageView
                        android:id="@+id/beverage_detail_volume_drawable"
                        android:layout_width="128dp"
                        android:layout_height="96dp"
                        app:layout_constraintBottom_toTopOf="@id/beverage_detail_volume_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:setDrawable="@{viewModel.beverageDetailVolumeDrawableResource}" />

                    <TextView
                        android:id="@+id/beverage_detail_volume_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:gravity="center_horizontal"
                        android:text="@{viewModel.volumeText}"
                        android:textAllCaps="true"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toTopOf="@id/beverage_detail_ingredients"
                        tools:text="420 ml." />

                    <TextView
                        android:id="@+id/beverage_detail_ingredients"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="32dp"
                        android:text="@{viewModel.beverageDetailIngredientsListing}"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="Ingredients\n2 shots of Espresso\nScalded Soy\nChocolate" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    app:layout_constraintBottom_toTopOf="@id/mail_order_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/beverage_detail_ingredients_container"
                    app:layout_constraintVertical_bias="0" />

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:id="@+id/input_details_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rectangle_rounded_white"
                    android:elevation="8dp"
                    android:padding="16dp"
                    app:layout_constraintBottom_toTopOf="@id/mail_order_button"
                    app:layout_constraintTop_toBottomOf="@id/beverage_detail_ingredients_container"
                    app:layout_constraintVertical_bias="0">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_input_layout"
                        style="@style/textViewStyling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/editTextLayoutStyling"
                        app:errorEnabled="true"
                        app:errorText="@{viewModel.customerNameInputError}"
                        app:errorTextAppearance="@style/MyErrorText"
                        app:hintEnabled="false"
                        app:hintTextAppearance="@style/MyHintText"
                        app:layout_constraintBottom_toTopOf="@id/email_input_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name_text_box"
                            style="@style/editTextViewStyling"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|left"
                            android:hint="@string/name_edit_text_hint"
                            android:inputType="text"
                            android:lines="8"
                            android:maxLines="10"
                            android:minLines="6"
                            android:nextFocusLeft="@id/email_text_box"
                            android:nextFocusUp="@id/email_text_box"
                            android:scrollbars="vertical"
                            android:text="@={viewModel.customerNameTextBox}"
                            android:textColorHint="@android:color/darker_gray"
                            app:focusChange="@{listeners.customerNameOnFocusChangeListener}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/editTextLayoutStyling"
                        app:errorEnabled="true"
                        app:errorText="@{viewModel.emailInputError}"
                        app:errorTextAppearance="@style/MyErrorText"
                        app:hintEnabled="false"
                        app:hintTextAppearance="@style/MyHintText"
                        app:layout_constraintBottom_toTopOf="@id/custom_order_name_input_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_text_box"
                            style="@style/editTextViewStyling"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|left"
                            android:hint="@string/email_address_edit_text_hint"
                            android:inputType="text"
                            android:lines="8"
                            android:maxLines="10"
                            android:minLines="6"
                            android:nextFocusLeft="@id/custom_order_name_box"
                            android:nextFocusUp="@id/custom_order_name_box"
                            android:scrollbars="vertical"
                            android:text="@={viewModel.emailTextBox}"
                            android:textColorHint="@android:color/darker_gray"
                            app:focusChange="@{listeners.emailOnFocusChangeListener}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/custom_order_name_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/editTextLayoutStyling"
                        app:errorEnabled="true"
                        app:errorText="@{viewModel.customOrderNameInputError}"
                        app:errorTextAppearance="@style/MyErrorText"
                        app:hintEnabled="false"
                        app:hintTextAppearance="@style/MyHintText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:showView="@{viewModel.isCustomOrder}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/custom_order_name_box"
                            style="@style/editTextViewStyling"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|left"
                            android:hint="@string/custom_order_name_edit_text_hint"
                            android:inputType="text"
                            android:lines="8"
                            android:maxLines="10"
                            android:minLines="6"
                            android:nextFocusLeft="@id/name_text_box"
                            android:nextFocusUp="@id/name_text_box"
                            android:scrollbars="vertical"
                            android:text="@={viewModel.customOrderNameTextBox}"
                            android:textColorHint="@android:color/darker_gray"
                            app:focusChange="@{listeners.customOrderNameOnFocusChangeListener}" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/mail_order_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{listeners.submitOrderListener}"
                    android:text="@string/submit_order_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>