...
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/beverage_temperature"
                    style="@style/textViewStyling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="@={viewModel.hotCoffee}"
                    android:text="Hot"
...
                android:elevation="8dp"
                android:padding="16dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/coffee_container">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chocolate"
                    style="@style/textViewStyling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:checked="@={viewModel.chocolate}"
...
                    android:text="Milk selection"
                    app:layout_constraintBottom_toTopOf="@id/milk_options_container"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chocolate" />

                <Spinner
                    android:id="@+id/milk_type"
                    style="@style/textViewStyling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toTopOf="@id/milk_options_container"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/milk_type"
                    app:showView="@{viewModel.showMilkOptions}">

                    <SeekBar
                        android:id="@+id/simpleSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:max="40"
                        android:paddingTop="8dp"
...
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.foamedMilk}"
                            android:layoutDirection="rtl"
                            android:text="Foamed" />

                        <RadioButton
                            android:id="@+id/Whipped"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.whippedMilk}"
                            android:layoutDirection="rtl"
                            android:text="Whipped" />

...
                android:contentDescription="@string/review_order_button_content_description"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{handlers.reviewOrderListener}"
                android:text="@string/review_order_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/extras_container"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
...
